# ConvNetPlayground

./: README.md  clean.py  final_train.sh
alexnet/: final_acc.txt  plot.py
alexnet/crov_1/: crov1.csv~  output_loss_1.txt
alexnet/crov_10/: crov10.csv  crov10.csv~
alexnet/crov_3/: crov3.csv~
alexnet/crov_4/: output_accuracy_4.txt  output_loss_4.txt
alexnet/crov_5/: crov5.csv  output_loss_5.txt
alexnet/crov_6/: crov6.csv  output_loss_6.txt
alexnet/crov_7/: crov7.csv  crov7.csv~
alexnet/crov_8/: crov8.csv~  extract_data.perl~
clean_dataset/: CreateIndex.m  GetImage.m  SearchImageFiles.m  classifier.m
clean_dataset/vlfeat/: vlfeat.vcproj
cnn/: CreateIndexResize.m  Rename.m  Resize.m  cnn_crossVal.sh  cnn_crossVal.sh~  emergency.sh  fix.sh
cnn/.svn/: wc.db
googlenet/: extract_data.perl~  final_acc.txt~  google_val.csv  new_plot.py~
image_scraper/: average_fileSize.py  brand_names.txt  utilities.py
image_scraper/AbstractLogoScraper/: LogoScraper.sln
image_scraper/BingLogoScraper/: BingQuerier.sln
image_scraper/FlickrLogoScraper/: FlickrQuerier.sln
image_scraper/GoogleLogoScraper/: google_querier.py
image_scraper/ReferenceImageSelector/: ReferenceImageSelector.sln
results/alexnet/: crov.perl  final_acc.txt~  (+3 more)
server/: nets.json  run_server.py  test.py
server_code/book-search/src/: .goutputstream-GHAFNX  CMakeCache.txt  CMakeLists.txt  Makefile  ccDistance.hpp  ccHKmeans.cpp  ccHKmeans.hpp  cmake_install.cmake  imgretrieval.cpp  imgretrieval.h  pyimret.pyx  setup.py  test.py  trainDemo.cbp  trainDemo.cpp
visualization/: Untitled.ipynb
(+708 files in other folders)
